--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "vendingmachine",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "ts-loader": "^4.4.2",
-    "typescript": "^3.0.1",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
-  },
-  "dependencies": {
-    "@types/requirejs": "^2.1.31",
-    "requirejs": "^2.3.5"
-  }
+    "name": "vendingmachine",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "webpack",
+        "debug": "npm run start & webpack-dev-server --open --hot"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "babel-core": "^6.26.3",
+        "babel-loader": "^7.1.5",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-preset-env": "^1.7.0",
+        "ts-loader": "^4.4.2",
+        "typescript": "^3.0.1",
+        "webpack": "^4.16.5",
+        "webpack-cli": "^3.1.0",
+        "webpack-dev-server": "^3.1.5"
+    },
+    "dependencies": {
+        "@types/requirejs": "^2.1.31",
+        "babel-polyfill": "^6.26.0",
+        "babel-runtime": "^6.26.0",
+        "requirejs": "^2.3.5"
+    }
 }
