--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "module": "amd",
-        // "outFile": "../js/app.js",
+        "module": "es6",
+        // "outFile": "../js/app.bundle.js",
         "outDir": "../js",
         "sourceMap": true,
         "strict": true
