--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
         "webpack-dev-server": "^3.1.5"
     },
     "dependencies": {
-        "@types/requirejs": "^2.1.31",
         "babel-polyfill": "^6.26.0",
-        "babel-runtime": "^6.26.0",
-        "requirejs": "^2.3.5"
+        "babel-runtime": "^6.26.0"
     }
 }
