--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/jquery": "^3.3.6",
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.5",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-env": "^1.7.0",
+        "expose-loader": "^0.7.5",
         "ts-loader": "^4.4.2",
         "typescript": "^3.0.1",
         "webpack": "^4.16.5",
@@ -22,6 +24,8 @@
     },
     "dependencies": {
         "babel-polyfill": "^6.26.0",
-        "babel-runtime": "^6.26.0"
+        "babel-runtime": "^6.26.0",
+        "jquery": "^3.3.1",
+        "knockout": "^3.4.2"
     }
 }
